@@ -3,7 +3,7 @@
 
 AC_PREREQ([2.64])
 AC_CONFIG_MACRO_DIR([m4])
-AC_INIT([procps],
+AC_INIT([procps-ng],
 	[3.3.0],
 	[procps@freelists.org],,[http://gitorious.org/procps])
 AM_INIT_AUTOMAKE
