@@ -103,4 +103,4 @@ Albert Cahalan <albert@users.sf.net> wrote kill in 1999 to replace a
 bsdutils one that was not standards compliant. The util-linux one might
 also work correctly.
 
-Please send bug reports to <procps-feedback@lists.sf.net>
+Please send bug reports to <procps@freelists.org>
