@@ -174,7 +174,4 @@ implementation is fully compatible.
 .SH AUTHOR
 Kjetil Torgrim Homme <kjetilho@ifi.uio.no>
 
-Albert Cahalan <albert@users.sf.net> is the current maintainer of
-the procps package.
-
-Please send bug reports to <procps-feedback@lists.sf.net>
+Please send bug reports to <procps@freelists.org>
