@@ -37,7 +37,5 @@ lB l l.
 .SH STANDARDS
 No standards apply, but pmap looks an awful lot like a SunOS command.
 
-.SH AUTHOR
-Albert Cahalan <albert@users.sf.net> wrote pmap in 2002, and is the current
-maintainer of the procps collection. Please send bug reports
-to <procps-feedback@lists.sf.net>.
+.SH BUG REPORTS
+Please send bug reports to <procps@freelists.org>
