@@ -3,9 +3,9 @@
 
 #include "procps.h"
 
-/* Suite version information for procps utilities
+/* Suite version information for procps-ng utilities
  * Copyright (c) 1995 Martin Schulze <joey@infodrom.north.de>
- * Linux kernel version information for procps utilities
+ * Linux kernel version information for procps-ng utilities
  * Copyright (c) 1996 Charles Blake <cblake@bbn.com>
  * Distributable under the terms of the GNU Library General Public License
  *
