@@ -1,15 +1,0 @@
-Begin4
-Title: procps
-Version: 3.2.7
-Entered-date: 2006-06-25
-Description: Linux system utilities
-Keywords: procps /proc libproc sysctl pmap ps uptime tload slabtop
-	free w top vmstat watch skill snice kill pgrep pkill
-Author: Albert Cahalan, Michael K. Johnson, Jim Warner, etc.
-Maintained-by: various <procps-feedback@lists.sf.net>
-Primary-site: http://procps.sf.net/
-	281kB procps-3.2.7.tar.gz
-Alternate-site: http://www.debian.org/Packages/unstable/base/procps.html
-	281kB procps-3.2.7.tar.gz
-Copying-policy: mixed
-End
