@@ -643,13 +643,13 @@ Print debugging info.
 List all format specifiers.
 
 .opt V
-Print the procps version.
+Print the procps-ng version.
 
 .opt \-V
-Print the procps version.
+Print the procps-ng version.
 
 .opt \-\-version
-Print the procps version.
+Print the procps-ng version.
 
 .\" """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .PD
@@ -1534,5 +1534,5 @@ Mossberger\-Tang wrote the generic BFD support for psupdate. Albert Cahalan
 <albert@users.sf.net> rewrote ps for full Unix98 and BSD support, along with
 some ugly hacks for obsolete and foreign syntax.
 
-Please send bug reports to <procps\-feedback@lists.sf.net>.
+Please send bug reports to <procps@freelists.org>.
 No\ subscription is required or suggested.
