@@ -34,4 +34,4 @@ No standards apply, but pwdx looks an awful lot like a SunOS command.
 
 .SH AUTHOR
 Nicholas Miell <nmiell@gmail.com> wrote pwdx in 2004. Please send bug
-reports to <procps-feedback@lists.sf.net>.
+reports to <procps@freelists.org>
