@@ -124,5 +124,6 @@ No standards apply.
 
 .SH AUTHOR
 Albert Cahalan <albert@users.sf.net> wrote skill and snice in 1999 as a
-replacement for a non-free version, and is the current maintainer of the
-procps collection. Please send bug reports to <procps-feedback@lists.sf.net>.
+replacement for a non-free version.
+
+Please send bug reports to <procps@freelists.org>.
