@@ -1,4 +1,4 @@
-.\" slabtop.1 - manpage for the slabtop(1) utility, part of procps
+.\" slabtop.1 - manpage for the slabtop(1) utility, part of procps-ng
 .\"
 .\" Copyright (C) 2003 Chris Rivera
 .\" Licensed under the terms of the GNU Library General Public License, v2
@@ -124,6 +124,4 @@ Written by Chris Rivera and Robert Love.
 .B slabtop
 was inspired by Martin Bligh's perl script,
 .BR vmtop .
-The procps package is maintained by Albert Cahalan <albert@users.sf.net>.
-
-Please send bug reports to <procps-feedback@lists.sf.net>.
+Please send bug reports to <procps@freelists.org>.
