@@ -39,7 +39,7 @@ process information
 was written by Larry Greenfield <greenfie@gauss.rutgers.edu> and
 Michael K. Johnson <johnsonm@sunsite.unc.edu>.
 
-Please send bug reports to <albert@users.sf.net>
+Please send bug reports to <procps@freelists.org>
 .SH "SEE ALSO"
 .BR ps (1),
 .BR top (1),
