@@ -81,4 +81,4 @@ was re-written almost entirely by Charles Blake, based on the version by Larry
 Greenfield <greenfie@gauss.rutgers.edu> and Michael K. Johnson
 <johnsonm@redhat.com>.
 
-Please send bug reports to <albert@users.sf.net>
+Please send bug reports to <procps@freelists.org>
